# wintray

./: CMakeLists.txt  readme.md
example/: CMakeLists.txt
example/source/: main.cpp
include/: wintray.hpp
source/: wintray.cpp
source/internal/: internal.cpp  internal.hpp
source/internal/utils/: utils.cpp  utils.hpp
